--- a/package.json
+++ b/package.json
@@ -13,14 +13,24 @@
   "dependencies": {
     "@prisma/client": "^6.8.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.0",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "prisma": "^6.8.2",
+    "sanitize-html": "^2.17.0",
     "zod": "^3.25.28"
   },
   "devDependencies": {
     "@types/cors": "^2.8.18",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.2",
+    "@types/express-rate-limit": "^5.1.3",
+    "@types/helmet": "^0.0.48",
+    "@types/hpp": "^0.2.6",
     "@types/node": "^22.15.21",
+    "@types/sanitize-html": "^2.16.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
