--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.ts"
   },
+  "prisma": {
+    "seed": "node prisma/seed.cjs"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
