--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon  --exec ts-node src/index.ts"
   },
   "prisma": {
     "seed": "node prisma/seed.cjs"
@@ -26,7 +26,9 @@
     "jsonwebtoken": "^9.0.2",
     "prisma": "^6.8.2",
     "sanitize-html": "^2.17.0",
-    "zod": "^3.25.28"
+    "zod": "^3.25.28",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -38,8 +40,6 @@
     "@types/hpp": "^0.2.6",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.21",
-    "@types/sanitize-html": "^2.16.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "@types/sanitize-html": "^2.16.0"
   }
 }
