--- a/package.json
+++ b/package.json
@@ -27,9 +27,7 @@
     "jsonwebtoken": "^9.0.2",
     "prisma": "^6.8.2",
     "sanitize-html": "^2.17.0",
-    "zod": "^3.25.28",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "zod": "^3.25.28"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -41,6 +39,8 @@
     "@types/hpp": "^0.2.6",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.21",
-    "@types/sanitize-html": "^2.16.0"
+    "@types/sanitize-html": "^2.16.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
