--- a/package.json
+++ b/package.json
@@ -27,9 +27,7 @@
     "jsonwebtoken": "^9.0.2",
     "prisma": "^6.8.2",
     "sanitize-html": "^2.17.0",
-    "zod": "^3.25.28"
-  },
-  "devDependencies": {
+    "zod": "^3.25.28",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.18",
     "@types/dotenv": "^6.1.1",
@@ -42,5 +40,6 @@
     "@types/sanitize-html": "^2.16.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
-  }
+  },
+  "devDependencies": {}
 }
