--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "jsonwebtoken": "^9.0.2",
     "prisma": "^6.8.2",
     "sanitize-html": "^2.17.0",
-    "zod": "^3.25.28",
+    "zod": "^3.25.28"
+  },
+  "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.18",
     "@types/dotenv": "^6.1.1",
@@ -40,6 +42,5 @@
     "@types/sanitize-html": "^2.16.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
-  },
-  "devDependencies": {}
+  }
 }
